# Concordium-Blockchains

Concordium_Blockchain/: Cargo.toml
Concordium_Blockchain/src/: cis2_contract.rs  lib.rs  main.rs  verifier.rs
Concordium_Blockchain/src/backend/: Cargo.toml
Concordium_Blockchain/src/backend/config/: statement.json
Concordium_Blockchain/src/backend/src/: handlers.rs  main.rs  type.rs
