[package]
name = "Concordium_Blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
concordium-std = { version = "^0.6.0", features = ["wasm-bindgen"] }
hashbrown = "0.11.2"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
debug = false

