[package]
name = "id-verifier"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "2.33.3"
concordium-rust-sdk = "2.4.0"
env_logger = "0.9.0"
log = "0.4.14"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.5", features = ["full"] }
warp = "0.3.1"
rand = "^0.8.5"

[dependencies.ed25519-dalek]
version = "1.0"
features = ["serde"]

[dependencies.hex]
version = "0.4"
features = ["serde"]

[dependencies.serde_json]
version = "1.0"
features = ["preserve_order"]